package ru.Timur;

// Даёт возможность прятаться
public interface Hideable {
    void hide(Interior obj);
}
